@@ -532,6 +532,32 @@ function ahuacatlInsertSuite () {
       assertEqual(1, c2.count());
     },
 
+    testInsertTripleWithSub : function () {
+      c1.truncate();
+      c2.truncate();
+
+      c3.drop();
+      c3 = db._createEdgeCollection(cn3);
+
+      const query = `WITH @@usersCollection, @@emailsCollection, @@userToEmailEdges
+                     LET user = FIRST(INSERT @user IN @@usersCollection RETURN NEW) 
+                     INSERT @email IN @@emailsCollection
+                     INSERT @edge IN @@userToEmailEdges
+                     RETURN user`;
+      const bind = { "@usersCollection" : cn1,
+                     "@emailsCollection" : cn2,
+                     "@userToEmailEdges" : cn3,
+                     "user" : { "name" : "ulf" },
+                     "email" : { "addr" : "ulf@ulf.de"},
+                     "edge" : { "_from" : "usersCollection/abc" , "_to" : "emailsCollection/def"}
+                   };
+      const options = {optimizer : { rules : ["+all"] } };
+
+      db._query(query, bind, options);
+      assertEqual(1, c1.count());
+      assertEqual(1, c2.count());
+      assertEqual(1, c3.count());
+    },
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test insert
 ////////////////////////////////////////////////////////////////////////////////
